feat: implement transaction management configuration